--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
-find_package(Boost COMPONENTS unit_test_framework random timer REQUIRED)
-include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
+add_library(Gps gps.cpp)
 
-include_directories(${Gps_SOURCE_DIR}/include /home/tw395/opt/include/StOpt/cdf /home/tw395/opt/include/eigen3)
-add_executable(gpsTest gpsTest.cpp)
-target_link_directories(gpsTest PUBLIC /home/tw395/opt/lib)
-target_link_libraries(gpsTest StOpt ${Boost_RANDOM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_TIMER_LIBRARY})
+target_compile_features(Gps PRIVATE cxx_std_17)
+
+target_include_directories(Gps PUBLIC "${Gps_SOURCE_DIR}/include/gps"  "/home/tw395/opt/boost_1_77_0" "/home/tw395/opt/include/StOpt/cdf"  "/home/tw395/opt/include/eigen3")
+
+target_link_directories(Gps PUBLIC "/home/tw395/opt/lib" "/home/tw395/opt/boost_1_77_0/stage/lib")
+
+target_link_libraries(Gps StOpt)
