Added file-dependent unit test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
+# TODO remove if exporting
+find_program(CMAKE_CXX_COMPILER NAMES $ENV{CXX} g++ PATHS ENV PATH NO_DEFAULT_PATH)
+
 project(Gps VERSION 0.1)
 
 set(CMAKE_CXX_STANDARD 17)
