Will try including StOptCDF as a library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,10 +7,6 @@ FetchContent_Declare(
   GIT_SHALLOW TRUE)
 FetchContent_MakeAvailable(rapidcsv)
 
-target_compile_features(Gps PRIVATE cxx_std_17)
+target_include_directories(Gps PUBLIC "${Gps_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}" "/opt/include/eigen-3-4.0" "/usr/local/include/StOpt")
 
-target_include_directories(Gps PUBLIC "${Gps_SOURCE_DIR}/include/gps"  "/home/tw395/opt/boost_1_77_0" "/home/tw395/opt/include/StOpt/cdf"  "/home/tw395/opt/include/eigen3")
-
-target_link_directories(Gps PUBLIC "/home/tw395/opt/lib" "/home/tw395/opt/boost_1_77_0/stage/lib")
-
-target_link_libraries(Gps StOpt rapidcsv)
+target_link_libraries(Gps rapidcsv Boost StOpt)
