--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,7 +1,5 @@
 add_executable(gpsTest gpsTest.cpp)
 
-target_include_directories(gpsTest PUBLIC "${Gps_SOURCE_DIR}/include/gps"  "/home/tw395/opt/boost_1_77_0" "/home/tw395/opt/include/StOpt/cdf"  "/home/tw395/opt/include/eigen3")
-
-target_link_directories(gpsTest PUBLIC "/home/tw395/opt/lib" "/home/tw395/opt/boost_1_77_0/stage/lib")
+target_include_directories(gpsTest PUBLIC "${Gps_SOURCE_DIR}/include/gps" ${Boost_INCLUDE_DIRS} "/opt/include/eigen-3-4.0/Eigen" "/usr/local/include/StOpt")
 
 target_link_libraries(gpsTest PRIVATE Gps)
