Working on cmake overhaul

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,7 +1,11 @@
 add_executable(gpsTest gpsTest.cpp)
 
-target_include_directories(gpsTest PUBLIC "${Gps_SOURCE_DIR}/include/gps"  "/home/tw395/opt/boost_1_77_0" "/home/tw395/opt/include/StOpt/cdf"  "/home/tw395/opt/include/eigen3")
+target_include_directories(gpsTest PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}" "${StOpt_INCLUDE_DIRS}")
 
-target_link_directories(gpsTest PUBLIC "/home/tw395/opt/lib" "/home/tw395/opt/boost_1_77_0/stage/lib")
+target_link_libraries(gpsTest Boost::random Eigen3::Eigen rapidcsv Gps)
 
-target_link_libraries(gpsTest PRIVATE Gps)
+add_executable(lwEcdfFault lwEcdfFault.cpp)
+
+target_include_directories(lwEcdfFault PUBLIC "${Boost_INCLUDE_DIRS}" "${StOpt_INCLUDE_DIRS}")
+
+target_link_libraries(lwEcdfFault Boost::random Eigen3::Eigen StOpt)
