--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(gpsTest gpsTest.cpp)
 
-target_include_directories(gpsTest PUBLIC "${Gps_SOURCE_DIR}/include/gps" ${Boost_INCLUDE_DIRS} "/opt/include/eigen-3-4.0/Eigen" "/usr/local/include/StOpt")
+target_include_directories(gpsTest PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}" "${CMAKE_SOURCE_DIR}/include/StOptCDF")
 
-target_link_libraries(gpsTest PRIVATE Gps)
+target_link_libraries(gpsTest Boost::random Eigen3::Eigen rapidcsv Gps)
