--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,17 +11,8 @@ include(FetchContent)
 
 enable_testing()
 
-#set(CMAKE_PREFIX_PATH "/usr/local/lib")
-
-find_package(Boost 1.77 COMPONENTS random math_c99 REQUIRED)
+find_package(Boost 1.77 COMPONENTS random math_c99 program_options REQUIRED)
 find_package(Eigen3 3.3 REQUIRED NAMES Eigen3 Eigen eigen NO_MODULE)
-
-FetchContent_Declare(
-  rapidcsv
-  GIT_REPOSITORY https://github.com/d99kris/rapidcsv.git
-  GIT_TAG v8.53
-  GIT_SHALLOW TRUE)
-FetchContent_MakeAvailable(rapidcsv)
 
 add_subdirectory(StOptCDF)
 add_subdirectory(src)
