--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,5 @@
 add_library(Gps gps.cpp)
 
-FetchContent_Declare(
-  rapidcsv
-  GIT_REPOSITORY https://github.com/d99kris/rapidcsv.git
-  GIT_TAG v8.53
-  GIT_SHALLOW TRUE)
-FetchContent_MakeAvailable(rapidcsv)
-
 target_include_directories(Gps PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}" "${CMAKE_SOURCE_DIR}/include/StOptCDF")
 
-target_link_libraries(Gps rapidcsv Eigen3::Eigen Boost::random Boost::math_c99 StOptCDF)
+target_link_libraries(Gps Eigen3::Eigen Boost::random Boost::math_c99 StOptCDF)
