Added L&W exemplar code

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -9,3 +9,17 @@ add_executable(rgpsCLI rgpsCLI.cpp)
 target_include_directories(rgpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
 target_link_libraries(rgpsCLI Gps Boost::program_options Boost::random)
+
+#add_executable(testPermutation testPermutation.cpp)
+
+#target_include_directories(testPermutation PUBLIC "${CMAKE_SOURCE_DIR}/include/gps")
+
+#target_link_libraries(testPermutation Gps rapidcsv)
+
+add_executable(lwIssue lwIssue.cpp)
+
+target_include_directories(lwIssue PUBLIC "/home/tw395/opt/include/StOpt/cdf")
+
+target_link_directories(lwIssue PUBLIC "/home/tw395/opt/lib")
+
+target_link_libraries(lwIssue Eigen3::Eigen Boost::random StOpt)
