--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,11 +1,17 @@
 add_executable(computeGpsCLI computeGpsCLI.cpp)
 
-target_include_directories(computeGpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}" "${CMAKE_SOURCE_DIR}/include/StOptCDF")
+target_include_directories(computeGpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
 target_link_libraries(computeGpsCLI Boost::program_options Gps rapidcsv)
 
 add_executable(permuteTraitsCLI permuteTraitsCLI.cpp)
 
-target_include_directories(permuteTraitsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}" "${CMAKE_SOURCE_DIR}/include/StOptCDF")
+target_include_directories(permuteTraitsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
 target_link_libraries(permuteTraitsCLI Boost::program_options Gps rapidcsv)
+
+add_executable(permuteProblem permuteProblem.cpp)
+
+target_include_directories(permuteProblem PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
+
+target_link_libraries(permuteProblem Boost::program_options Gps rapidcsv)
