Reorganised code, made CLI program for more general use in computing the GPS

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -15,3 +15,9 @@ add_executable(permuteProblem permuteProblem.cpp)
 target_include_directories(permuteProblem PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
 target_link_libraries(permuteProblem Boost::program_options Gps rapidcsv)
+
+add_executable(computeGpsForUkbbTraitPairsCLI computeGpsForUkbbTraitPairsCLI.cpp)
+
+target_include_directories(computeGpsForUkbbTraitPairsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
+
+target_link_libraries(computeGpsForUkbbTraitPairsCLI Boost::program_options Gps rapidcsv)
