Additions for current snakemake pipeline

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -21,3 +21,9 @@ add_executable(computeGpsForUkbbTraitPairsCLI computeGpsForUkbbTraitPairsCLI.cpp
 target_include_directories(computeGpsForUkbbTraitPairsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
 target_link_libraries(computeGpsForUkbbTraitPairsCLI Boost::program_options Gps rapidcsv)
+
+add_executable(computeGpsForPidUkbbTraitPairsCLI computeGpsForPidUkbbTraitPairsCLI.cpp)
+
+target_include_directories(computeGpsForPidUkbbTraitPairsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
+
+target_link_libraries(computeGpsForPidUkbbTraitPairsCLI Boost::program_options Gps rapidcsv)
