Added perturbation flag and cores argument to computeGpsCLI

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,8 +1,10 @@
+find_package(OpenMP)
+
 add_executable(computeGpsCLI computeGpsCLI.cpp)
 
 target_include_directories(computeGpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(computeGpsCLI Boost::program_options Gps rapidcsv)
+target_link_libraries(computeGpsCLI Boost::program_options Gps rapidcsv OpenMP::OpenMP_CXX)
 
 add_executable(computeGpsNoPerturbCLI computeGpsNoPerturbCLI.cpp)
 
