Added p-value perturbation CLI program

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -41,3 +41,9 @@ add_executable(permuteProblem permuteProblem.cpp)
 target_include_directories(permuteProblem PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
 target_link_libraries(permuteProblem Boost::program_options Boost::random Gps rapidcsv)
+
+add_executable(perturbPvalues perturbPvalues.cpp)
+
+target_include_directories(perturbPvalues PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
+
+target_link_libraries(perturbPvalues Boost::program_options Boost::random Gps rapidcsv)
