--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(computeGpsCLI computeGpsCLI.cpp)
 
 target_include_directories(computeGpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(computeGpsCLI Boost::program_options Gps rapidcsv OpenMP::OpenMP_CXX DataFrame)
+target_link_libraries(computeGpsCLI Boost::program_options Gps rapidcsv OpenMP::OpenMP_CXX)
 
 add_executable(computeGpsNoPerturbCLI computeGpsNoPerturbCLI.cpp)
 
