--- a/PPEcdf/CMakeLists.txt
+++ b/PPEcdf/CMakeLists.txt
@@ -2,4 +2,4 @@ add_library(PPEcdf PPEcdf.cpp)
 
 find_package(OpenMP)
 
-target_include_directories(PPEcdf PUBLIC "${CMAKE_SOURCE_DIR}/include/PPEcdf")
+target_include_directories(PPEcdf PUBLIC "${CMAKE_SOURCE_DIR}/include/PPEcdf" "${Boost_INCLUDE_DIRS}")
