--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -2,9 +2,9 @@ find_package(OpenMP)
 
 add_executable(computeGpsCLI computeGpsCLI.cpp)
 
-target_include_directories(computeGpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
+target_include_directories(computeGpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${CMAKE_SOURCE_DIR}/include/PPEcdf" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(computeGpsCLI Boost::program_options Gps rapidcsv OpenMP::OpenMP_CXX)
+target_link_libraries(computeGpsCLI Boost::program_options Gps rapidcsv OpenMP::OpenMP_CXX PPEcdf)
 
 add_executable(permuteTraitsCLI permuteTraitsCLI.cpp)
 
