Added switches for use of different ecdf algorithms

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -8,15 +8,15 @@ target_link_libraries(computeGpsCLI Boost::program_options Gps rapidcsv OpenMP::
 
 add_executable(permuteTraitsCLI permuteTraitsCLI.cpp)
 
-target_include_directories(permuteTraitsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
+target_include_directories(permuteTraitsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${CMAKE_SOURCE_DIR}/include/PPEcdf" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(permuteTraitsCLI Boost::program_options Gps rapidcsv)
+target_link_libraries(permuteTraitsCLI Boost::program_options Gps rapidcsv PPEcdf)
 
 add_executable(fitAndEvaluateEcdfsCLI fitAndEvaluateEcdfsCLI.cpp)
 
-target_include_directories(fitAndEvaluateEcdfsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
+target_include_directories(fitAndEvaluateEcdfsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(fitAndEvaluateEcdfsCLI Boost::program_options Gps rapidcsv OpenMP::OpenMP_CXX)
+target_link_libraries(fitAndEvaluateEcdfsCLI Boost::program_options Gps rapidcsv OpenMP::OpenMP_CXX PPEcdf)
 
 add_executable(testPPEcdfCLI testPPEcdfCLI.cpp)
 
