Added timing facility to computeGpsCLI

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(computeGpsCLI computeGpsCLI.cpp)
 
 target_include_directories(computeGpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${CMAKE_SOURCE_DIR}/include/PPEcdf" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(computeGpsCLI Boost::program_options Gps rapidcsv OpenMP::OpenMP_CXX PPEcdf)
+target_link_libraries(computeGpsCLI Boost::program_options Boost::timer Gps rapidcsv OpenMP::OpenMP_CXX PPEcdf)
 
 add_executable(permuteTraitsCLI permuteTraitsCLI.cpp)
 
