--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,6 @@ add_library(Gps gps.cpp)
 
 find_package(OpenMP)
 
-target_include_directories(Gps PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}" "${CMAKE_SOURCE_DIR}/include/StOptCDF")
+target_include_directories(Gps PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(Gps Eigen3::Eigen Boost::random Boost::math_c99 StOptCDF OpenMP::OpenMP_CXX)
+target_link_libraries(Gps Boost::random Boost::math_c99 OpenMP::OpenMP_CXX)
