Added prospective orbtree dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,13 @@ FetchContent_Declare(
   GIT_SHALLOW TRUE)
 FetchContent_MakeAvailable(rapidcsv)
 
+FetchContent_Declare(
+  orbtree
+  GIT_REPOSITORY https://github.com/dkondor/orbtree.git
+  GIT_TAG 39e6b3c
+  GIT_SHALLOW TRUE)
+FetchContent_MakeAvailable(orbtree)
+
 add_subdirectory(src)
 add_subdirectory(apps)
 add_subdirectory(test)
