--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,4 @@ find_package(OpenMP)
 
 target_include_directories(Gps PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(Gps Boost::random Boost::math_c99 OpenMP::OpenMP_CXX)
+target_link_libraries(Gps OpenMP::OpenMP_CXX)
