Fixed obscure linking error

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,5 +1,8 @@
 find_package(OpenMP)
 
+# Added to fix this linking issue: https://stackoverflow.com/a/30877725
+add_definitions("-DBOOST_SYSTEM_NO_DEPRECATED")
+
 add_executable(computeGpsCLI computeGpsCLI.cpp)
 
 target_include_directories(computeGpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${CMAKE_SOURCE_DIR}/include/PPEcdf" "${Boost_INCLUDE_DIRS}")
