--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -8,17 +8,19 @@ add_executable(computeGpsCLI computeGpsCLI.cpp)
 
 target_include_directories(computeGpsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${CMAKE_SOURCE_DIR}/include/PPEcdf" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(computeGpsCLI Boost::program_options Boost::timer Gps rapidcsv OpenMP::OpenMP_CXX PPEcdf)
+target_link_libraries(computeGpsCLI PUBLIC Boost::timer Gps rapidcsv OpenMP::OpenMP_CXX PPEcdf )
+target_link_libraries(computeGpsCLI PRIVATE CLI11::CLI11)
 
 add_executable(permuteTraitsCLI permuteTraitsCLI.cpp)
 
-
 target_include_directories(permuteTraitsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${CMAKE_SOURCE_DIR}/include/PPEcdf" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(permuteTraitsCLI Boost::program_options Gps rapidcsv PPEcdf)
+target_link_libraries(permuteTraitsCLI PUBLIC Gps rapidcsv PPEcdf)
+target_link_libraries(permuteTraitsCLI PRIVATE CLI11::CLI11)
 
 add_executable(fitAndEvaluateEcdfsCLI fitAndEvaluateEcdfsCLI.cpp)
 
 target_include_directories(fitAndEvaluateEcdfsCLI PUBLIC "${CMAKE_SOURCE_DIR}/include/gps" "${CMAKE_SOURCE_DIR}/include/gps" "${Boost_INCLUDE_DIRS}")
 
-target_link_libraries(fitAndEvaluateEcdfsCLI Boost::program_options Gps rapidcsv OpenMP::OpenMP_CXX PPEcdf)
+target_link_libraries(fitAndEvaluateEcdfsCLI PUBLIC Gps rapidcsv OpenMP::OpenMP_CXX PPEcdf)
+target_link_libraries(fitAndEvaluateEcdfsCLI PRIVATE CLI11::CLI11)
