Only using multi_index from Boost now, still big footprint, though

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
-# Setting this version so we can use FetchContent
+# Setting this version so we can use FetchContent and to eliminate warning that <3.5 compatibility is going away
 cmake_minimum_required(VERSION 3.5)
 
 find_program(CMAKE_CXX_COMPILER NAMES $ENV{CXX} g++ PATHS ENV PATH NO_DEFAULT_PATH)
 
-project(Gps VERSION 0.3)
+project(Gps VERSION 0.4)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -11,7 +11,6 @@ include(FetchContent)
 
 enable_testing()
 
-#find_package(Boost 1.59)
 # As per https://github.com/boostorg/cmake
 FetchContent_Declare(
   Boost
@@ -20,6 +19,7 @@ FetchContent_Declare(
   DOWNLOAD_EXTRACT_TIMESTAMP ON
 )
 
+set(BOOST_INCLUDE_LIBRARIES multi_index)
 FetchContent_MakeAvailable(Boost)
 
 FetchContent_Declare(
@@ -36,7 +36,6 @@ FetchContent_Declare(
   GIT_TAG v2.3.2
 )
 FetchContent_MakeAvailable(cli11_proj)
-
 
 add_subdirectory(src)
 add_subdirectory(apps)
